# testcicd

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
